<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Quiz Me</string>
  <string name="LaunchQuizButton">TeachMe</string>
  <string name="LaunchManagerButton">Manage Cards</string>
  <string name="QuizzerDescription">Shows the Quiz Cards that are currently scheduled for review.</string>
  <string name="QuizzerName">Quizzer</string>
  <string name="CardManagerName">Card Manager</string>
  <string name="CardManagerDescription">Manage the card decks. Create new cards, import/export, delete cards</string>
  <string name="NewCard">New Card</string>
  <string name="NewCardDialogTitle">Create Card</string>
  <string name="NewCardDialogTitleDefault">Enter title here</string>
  <string name="NewCardChooseImage">Use an Image</string>
  <string name="NewCardChooseText">Use Text</string>
  <string name="NewCardDialogSide1">Side 1</string>
  <string name="NewCardDialogSide2">Side 2</string>
  <string name="NewCardCreatorName">Create Card</string>
  <string name="NewCardCreatorDescription">Create a new card in the database</string>
  <string name="SaveTextCardButton">Save Card Text</string>
  <string name="TextCardEditorName">quizme text card editor</string>
  <string name="TextCardEditorDescription">Text Card Editor for QuizMe</string>
  <string name="Side1Text">Side 1</string>
  <string name="Side2Text">Side 2</string>
  <string name="StartQuizButtonText">Start</string>
  <string name="StopQuizButtonText">Stop</string>
  <string name="SeeAnswerButtonText"> Answer</string>
  <string name="DoneRatingButton">Done</string>
  <string name="NoMoreCards">No More Cards :-)</string>
  <string name="CardDeleteButton">Delete</string>
  <string name="MainHelpText">Quiz-Me is a spaced repetition flashcard app for Android. It shows flashcards using an algorithm to schedule the cards you are just about to forget.</string>
</resources>
